# monolith

./: .gitignore  README.md  llm_detector.spec  llm_detector_monolith.py  pyproject.toml  requirements.txt  run_detector
.github/workflows/: build.yml
tests/: conftest.py  test_analyzers.py  test_calibration.py  test_compressibility.py  test_continuation_local.py  test_continuation_multi.py  test_fusion.py  test_lexicon.py  test_memory.py  test_normalize.py  test_pipeline.py  test_preamble_cot.py  test_reporting.py  test_similarity.py  test_spans.py  test_windowed.py
